--- a/LibrarySystem.BL/LibrarySystem.BL.csproj
+++ b/LibrarySystem.BL/LibrarySystem.BL.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Book.cs" />
     <Compile Include="Borrow.cs" />
     <Compile Include="Borrower.cs" />
+    <Compile Include="Copy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usr.cs" />
   </ItemGroup>
